# lalib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cmake_blas_backend.yml  cmake_inhouse.yml  cmake_lapack_backend.yml
benchmark/: CMakeLists.txt  vec.cc
cmake/: backend.cmake
include/: mat.hpp  type_traits.hpp  vec.hpp
include/err/: error.hpp
include/lalib/: mat.hpp  type_traits.hpp  vec.hpp
include/lalib/err/: error.hpp
include/lalib/mat/: dyn_mat.hpp  sized_mat.hpp  sp_mat.hpp
include/lalib/ops/: mat_mat_ops.hpp  mat_mat_ops_core.hpp  mat_ops.hpp  mat_vec_ops.hpp  mat_vec_ops_core.hpp  ops_traits.hpp  orthogonal.hpp  sp_mat_ops.hpp  vec_ops.hpp  vec_ops_core.hpp
include/lalib/solver/: cholesky_factorization.hpp  gmres.hpp  ilu.hpp  tri_diag.hpp
include/lalib/solver/internal/: cholesky_decomposition.hpp  tdma.hpp
include/lalib/solver/lapack/: gtsv.hpp  potr.hpp
include/lalib/vec/: dyn_vec.hpp  sized_vec.hpp
include/mat/: dyn_mat.hpp  sized_mat.hpp
include/ops/: mat_mat_ops.hpp  mat_mat_ops_core.hpp  mat_vec_ops.hpp  mat_vec_ops_core.hpp  ops_traits.hpp  vec_ops.hpp  vec_ops_core.hpp
include/solver/: tri_diag.hpp
include/solver/internal/: tdma.hpp
include/solver/lapack/: gtsv.hpp
include/vec/: dyn_vec.hpp  sized_vec.hpp
test/: CMakeLists.txt  assets.hpp.in
test/err/: error.cc
test/mat/: common_mat.cc  dyn_mat.cc  sized_mat.cc  sp_mat.cc
test/ops/: mat_mat_ops.cc  mat_ops.cc  mat_vec_ops.cc  orthogonal.cc  sp_mat_ops.cc  vec_ops.cc
test/solver/: cholesky_factorization.cc  gmres.cc  ilu.cc  tri_diag.cc
test/vec/: dyn_vec.cc  sized_vec.cc
